correct spacing on about page

--- a/src/index.css
+++ b/src/index.css
@@ -26,31 +26,30 @@ body {
   text-decoration: underline;
 }
 
-.info-img {
-  width: 100%;
-  height: auto;
-  position: relative;
-  background-color: rgba(200,100,0,.5);
-  background-blend-mode: multiply;
+.greeting {
+  font-size: 40px;
+  color: rgb(89, 89, 89);
+  text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  line-height: 75%;
+}
+
+.intro {
+  font-size: 21px;
+  color: rgb(89, 89, 89);
+  text-align: center;
 }
 
 .about-text {
   color: rgb(89, 89, 89);
-  font-size: 15px;
   text-align: center;
-}
-
-.contact-card > .mdl-card__title {
-  position: absolute;
-  height: 180%;
-  margin-left: 2%;
-  color: #fff;
-}
-
-.greeting {
-  font-size: 20px;
-  font-weight: bold;
-  color: rgb(89, 89, 89);
 }
 
 .contact-button {
